import("//azer/build/templates/bison.gni")

bison("preprocessor_parser") {
  source = "preprocessor.y"
  hpp = "preprocessor_tab.h"
  cpp = "preprocessor_tab.cpp"
  bison_flags = ["-t", "--report=state"]
  deps = [
    "//azer/base:build_info",
  ]
  defines = ["yyparse=preprocessor_yyparse", "yydebug=preprocessor_yydebug"]
}

static_library("preprocessor") {
  sources = [
    "parser.cc",
    "parser.h",
    "tokenizer.cc",
    "tokenizer.h",
  ]
  deps = [
    ":preprocessor_parser",
    "//base:base",
  ]
}
