import("//tools/grit/grit_rule.gni")
import("//tools/grit/repack.gni")

grit("hlsl") {
  source = "shaderlib.hlsl.grd"
  resource_ids = ""
  outputs = [
    "grit/shaderlib.hlsl.h",
    "shaderlib.hlsl.pak",
  ]
}

repack("shaderlib") {
  sources = [
    "$root_gen_dir/azer/effect/shaderlib/shaderlib.hlsl.pak",
  ]

  output = "$root_out_dir/shaderlib.hlsl.pak"
  deps = [
    "//ui/resources",
    "//ui/strings",
    ":hlsl",
  ]
}