
source_set("layers") {
  sources = [
    "bitmap_layer.cc",
    "bitmap_layer.h",
    "canvas_layer.cc",
    "canvas_layer.h",
    "layer.cc",
    "layer.h",
    "layer_tree_host.cc",
    "layer_tree_host.h",
    "texture_layer.cc",
    "texture_layer.h",
    "renderer_layer.cc",
    "renderer_layer.h",
  ]

  deps = [
    "//skia",
    "//ui/gfx",
    "//ui/gfx/geometry",
  ]
  configs += ["//azer/build/config:azer_code"]
  configs += ["//azer/base:build_render_config"]
  visibility = ["//azer"]
}

source_set("unittests") {
  testonly = true
  sources = [
    "tests/test_base.cc",
    "tests/test_base.h",
    "tests/layer_tests.cc",
  ]

  deps = [
    "//base/test:test_support",
    "//testing/gtest",
    "//skia",
    "//azer",
    "//ui/events",
    "//ui/gfx",
    "//ui/gfx/geometry",
  ]
  configs += ["//azer/build/config:azer_code"]
  visibility = ["//azer:unittests"]
}

executable("demo") {
  output_name = "layers_demo"
  sources = ["demo/main.cc"]
  deps = [
       "//base",
       "//azer",
       "//skia",
       "//ui/gfx",
       "//ui/gfx/geometry",
  ]
}