
source_set("skia") {
  sources = [
    "canvas.cc",
    "canvas.h",
    "context.cc",
    "context.h",
    "grcontext.cc",
    "grcontext.h",
    "device.cc",
    "device.h",
    "GrGLUtil.cpp",
    "GrGLUtil.h",
    "GrGLAssembleInterface.cpp",
    "GrGLAssembleInterface.h",
  ]
  deps = ["//skia"]
  configs += ["//azer/build/config:utf8src"]
  defines = ["BUILD_AZER_RENDER"]
  visibility = ["//azer/render"]
}