#include("//build/config/features.gni)
#include("//build/config/ui/gni)

source_set("skia") {
  sources = [
    "grcontext.cc",
    "grcontext.h",
  ]

  if (component_mode == "shared_library") {
    sources += [
      "GrGLUtil.cpp",
      "GrGLUtil.h",
      "GrGLAssembleInterface.cpp",
      "GrGLAssembleInterface.h",
    ]
    defines = ["AZER_SKIA_USE_DLL"]
  }
  
  deps = ["//skia"]
  configs += ["//azer/build/config:utf8src"]
  configs += ["//azer/base:build_render_config"]
  visibility = ["//azer/render:render2d"]
}