

static_library("util") {
  sources = [
    "byte_pack.cc",
    "byte_pack.h",
    "camera_object.cc",
    "camera_object.h",
    "coordinate_grid.cc",
    "coordinate_grid.h",
    "coordinate_grid_effect.cc",
    "coordinate_grid_effect.h",
    "coordinate_object.cc",
    "coordinate_object.h",
    "effects/diffuse_effect.cc",
    "effects/diffuse_effect.h",
    "effects/pvw_effect.cc",
    "effects/pvw_effect.h",
    "effects/vertex_desc.cc",
    "effects/vertex_desc.h",
    "fps_camera_controller.cc",
    "fps_camera_controller.h",
    "geometry/arrow_object.cc",
    "geometry/arrow_object.h",
    "geometry/box_object.cc",
    "geometry/box_object.h",
    "geometry/cone_object.cc",
    "geometry/cone_object.h",
    "geometry/cylinder_object.cc",
    "geometry/cylinder_object.h",
    "geometry/geometry_object.cc",
    "geometry/geometry_object.h",
    "geometry/plane_object.cc",
    "geometry/plane_object.h",
    "geometry/sphere_object.cc",
    "geometry/sphere_object.h",
    "geometry/square_trustum.cc",
    "geometry/square_trustum.h",
    "geometry/util.cc",
    "geometry/util.h",
    "image_processing.cc",
    "image_processing.h",
    "index_pack.cc",
    "index_pack.h",
    "shader_util.cc",
    "shader_util.h",
    "vertex_pack.cc",
    "vertex_pack.h",
  ]

  deps = [
    "//azer",
  ]
}