

static_library("util") {
  sources = [
    "byte_pack.cc",
    "byte_pack.h",
    "coordinate_grid.cc",
    "coordinate_grid.h",
    "coordinate_grid_effect.cc",
    "coordinate_grid_effect.h",
    "effects/diffuse_effect.cc",
    "effects/diffuse_effect.h",
    "effects/pvw_effect.cc",
    "effects/pvw_effect.h",
    "effects/vertex_desc.cc",
    "effects/vertex_desc.h",
    "fps_camera_controller.cc",
    "fps_camera_controller.h",
    "image_processing.cc",
    "image_processing.h",
    "tile.cc",
    "tile.h",
  ]

  deps = [
    "//azer",
  ]
}