shared_library("d3d11") {
  output_name = "d3d11_render_system"
  sources = [
    "azer_d3denv.cc",
    "azer_d3denv.h",
    "blending.cc",
    "blending.h",
    "d3denv.cc",
    "d3denv.h",
    "dx3d_util.cc",
    "dx3d_util.h",
    "depth_buffer.cc",
    "depth_buffer.h",
    "enum_transform.cc",
    "enum_transform.h",
    "gpu_compute_task.cc",
    "gpu_compute_task.h",
    "gpu_constants_table.cc",
    "gpu_constants_table.h",
    "indices_buffer.cc",
    "indices_buffer.h",
    "plugin.cc",
    "plugin.h",
    "rasterizer_state.cc",
    "rasterizer_state.h",
    "render_system.cc",
    "render_system.h",
    "render_system_2d.cc",
    "render_target.cc",
    "render_target.h",
    "renderer.cc",
    "renderer.h",
    "sampler_state.cc",
    "sampler_state.h",
    "shader.cc",
    "shader.h",
    "swap_chain.cc",
    "swap_chain.h",
    "technique.cc",
    "technique.h",
    "texture.cc",
    "texture.h",
    "vertex_buffer.cc",
    "vertex_buffer.h",
  ]
  deps = [
    "//azer",
    "//base",
    "//ui/gfx",
    "//ui/gl",
    "//skia",
  ]
  defines = ["BUILD_D3D11_AZER_RENDER_SYSTEM"]
  configs += [
    "//azer/build/config:d3d11",
    "//azer/build/config:utf8src",
  ]
  defpath = rebase_path("../render_system.def", root_build_dir)
  if (is_win) { ldflags = ["/DEF:$defpath"]}
}