
executable("coordinate") {
  output_name = "azer_sample_coordinate"
  sources = [
    "main.cc",
  ] 
  deps = [
    "//skia",
    "//ui/views",
    "//ui/base",
    "//ui/events",
    "//ui/gfx",
    "//ui/gfx/geometry",
    "//azer",
    "//azer/math",
    "//azer/render/util",
    "//nelf",
  ]
}