
group("mesh") {
  deps = [
    ":render_closure",
    ":mesh2",
  ]
}

executable("render_closure") {
  output_name = "azer_sample_render_closure"
  sources = [ "render_closure.cc", ] 
  deps = [
    "//skia",
    "//ui/views",
    "//ui/base",
    "//ui/events",
    "//ui/gfx",
    "//ui/gfx/geometry",
    "//azer",
    "//azer/math",
    "//azer/render/util",
    "//nelf",
  ]
}

executable("mesh2") {
  output_name = "azer_sample_mesh2"
  sources = [ "mesh2.cc", ] 
  deps = [
    "//skia",
    "//ui/views",
    "//ui/base",
    "//ui/events",
    "//ui/gfx",
    "//ui/gfx/geometry",
    "//azer",
    "//azer/math",
    "//azer/render/util",
    "//nelf",
  ]
}