
group("mesh") {
  deps = [
    ":render_closure",
    ":mesh_demo",
  ]
}

executable("render_closure") {
  output_name = "azer_sample_render_closure"
  sources = [ "render_closure.cc", ] 
  deps = [
    "//skia",
    "//ui/views",
    "//ui/base",
    "//ui/events",
    "//ui/gfx",
    "//ui/gfx/geometry",
    "//azer",
    "//azer/math",
    "//azer/render/util",
    "//nelf",
  ]
}

executable("mesh_demo") {
  output_name = "azer_sample_mesh"
  sources = [ "mesh.cc", ] 
  deps = [
    "//skia",
    "//ui/views",
    "//ui/base",
    "//ui/events",
    "//ui/gfx",
    "//ui/gfx/geometry",
    "//azer",
    "//azer/math",
    "//azer/render/util",
    "//nelf",
  ]
}