
group("mesh") {
  deps = [
    ":meshpart",
    ":mesh_demo",
  ]
}

executable("meshpart") {
  output_name = "azer_sample_meshpart"
  sources = [ "meshpart.cc", ] 
  deps = [
    "//skia",
    "//ui/views",
    "//ui/base",
    "//ui/events",
    "//ui/gfx",
    "//ui/gfx/geometry",
    "//azer",
    "//azer/math",
    "//azer/render/util",
    "//nelf",
  ]
}

executable("mesh_demo") {
  output_name = "azer_sample_mesh"
  sources = [ "mesh.cc", ] 
  deps = [
    "//skia",
    "//ui/views",
    "//ui/base",
    "//ui/events",
    "//ui/gfx",
    "//ui/gfx/geometry",
    "//azer",
    "//azer/math",
    "//azer/render/util",
    "//nelf",
  ]
}