
common_deps = [
  "//azer",
  "//azer/math",
  "//azer/render/util",
  "//nelf",
]

executable("objects") {
  output_name = "azer_sample_objects"
  sources = [ "main.cc", ] 
  deps = common_deps
}

executable("cone") {
  output_name = "azer_sample_objects_cone"
  sources = [ "cone.cc", ] 
  deps = common_deps
}

executable("cylinder") {
  output_name = "azer_sample_objects_cylinder"
  sources = [ "cylinder.cc", ] 
  deps = common_deps
}

executable("box") {
  output_name = "azer_sample_objects_box"
  sources = [ "box.cc", ] 
  deps = common_deps
}

executable("coordinate") {
  output_name = "azer_sample_objects_coordinate"
  sources = [ "coordinate.cc", ] 
  deps = common_deps
}

executable("plane") {
  output_name = "azer_sample_objects_plane"
  sources = [ "plane.cc", ] 
  deps = common_deps
}

executable("arrow") {
  output_name = "azer_sample_objects_arrow"
  sources = [ "arrow.cc", ] 
  deps = common_deps
}

executable("square_trustum") {
  output_name = "azer_sample_objects_square_trustum"
  sources = [ "square_trustum.cc", ] 
  deps = common_deps
}