executable("triangle") {
  output_name = "azer_sample_triangle"
  sources = [
    "main.cc",
    "diffuse.afx.cc",
    "diffuse.afx.h",
  ]
  deps = [
    "//skia",
    "//ui/views",
    "//ui/base",
    "//ui/events",
    "//ui/gfx",
    "//ui/gfx/geometry",
    "//azer",
    "//azer/render/util",
    "//nelf",
  ]
}