group("triangle") {
  deps = [
    ":vertex_triangle",
    ":index_triangle",
    ":ndc_triangle",
    ":entity_triangle",
  ]
}


executable("ndc_triangle") {
  output_name = "azer_samples_ndc_triangle"
  sources = [ "ndc_triangle.cc", ]
  deps = [
    "//azer/ui",
    "//azer",
    "//azer/util/geometry",
  ]
}

executable("vertex_triangle") {
  output_name = "azer_samples_vertex_triangle"
  sources = [ "vertex_triangle.cc", ]
  deps = [
    "//azer/ui",
    "//azer",
    "//azer/util/geometry",
  ]
}

executable("index_triangle") {
  output_name = "azer_samples_index_triangle"
  sources = [ "index_triangle.cc", ]
  deps = [
    "//azer/ui",
    "//azer",
    "//azer/util/geometry",
  ]
}

executable("entity_triangle") {
  output_name = "azer_samples_entity_triangle"
  sources = [ "entity_triangle.cc", ]
  deps = [
    "//azer/ui",
    "//azer",
    "//azer/util/geometry",
  ]
}